plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.github.hojoungjang'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Swagger 문서
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

	// env 파일 로드해 key-value 객체로 사용
	implementation 'io.github.cdimascio:dotenv-java:3.2.0'

	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	implementation('com.querydsl:querydsl-mongodb:5.0.0') {
		// 스프링에서 받아오는 드라이버 버전이랑 충돌; QueryDSL 은 오래된 버전을 사용하기 때문에 이걸 제외한다.
		exclude group: "org.mongodb", module: "mongo-java-driver"
	}

	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:general'

	testAnnotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	testAnnotationProcessor 'jakarta.persistence:jakarta.persistence-api'
	testAnnotationProcessor 'com.querydsl:querydsl-apt:5.0.0:general'
}

tasks.named('test') {
	useJUnitPlatform()
	systemProperty "spring.profiles.active", "test"
	jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}", '-Xshare:off'
}

tasks.register('seedMoveData', JavaExec) {
	classpath = sourceSets.main.runtimeClasspath
	mainClass = 'com.github.hojoungjang.tekken_combo_maker.move.seeder.MoveDataSeederRunner'
}
